--- a/src/Components/dash/Dash.css
+++ b/src/Components/dash/Dash.css
@@ -12,12 +12,12 @@
     display: flex;
     margin-top: 25px;
     justify-content: space-between;
+    width: 100% !important;
 }
 
 .tabPanel1{
     display: flex;
     justify-content: center;
-    /* width: 100% !important; */
     
 }
 .container--cards{
@@ -28,7 +28,12 @@
     align-items: center;
 }
 .container--title{
-    width: 400px;
+    width: 300px;
+    margin: 0 !important;
+}
+.card--genre{
+    width: 250px !important;
+    margin: 5px 5px 0 0;
 }
 @media only screen and (max-width: 900px){
     .container--genre{
@@ -36,10 +41,25 @@
         flex-wrap: wrap;
         flex-direction: column;
         margin-top: 15px;
-        width: 100%;        
+        width: 400px;        
     }
     .container--cards{
         flex-direction: column;
+    }
+    .container--cards{
+        width: 400px !important;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+    .container--title{
+        width: 200px;
+        margin-left: 60px !important;
+    }
+    .card--genre{
+        width: 100% !important;
+        margin: 5px 5px 5px 0;
     }
     
 
