--- a/src/Components/dash/cards/cards.css
+++ b/src/Components/dash/cards/cards.css
@@ -8,6 +8,7 @@
     align-items: center;
     flex-direction: column;
 }
+
 .apexcharts-legend-text{
     color: #fff !important;
 }
@@ -22,6 +23,13 @@
 }
 .wrapper--grafico{
     margin-top: 30px;
+    width: 400px;
+}
+.container--charts{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
 }
 .custom-tooltip{
     background: #0288d1 !important;
