--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,26 @@
   width: 100% !important;
   margin-top: 6%;
 }
+
+/* Largura da barra de rolagem */
+::-webkit-scrollbar {
+  width: 18px;
+}
+
+/* Fundo da barra de rolagem */
+::-webkit-scrollbar-track-piece {
+  background-color: #EEE;
+  border-left: 1px solid #CCC
+}
+
+/* Cor do indicador de rolagem */
+::-webkit-scrollbar-thumb:vertical,
+::-webkit-scrollbar-thumb:horizontal {
+  background-color: #42a5f5
+}
+
+/* Cor do indicador de rolagem - ao passar o mouse */
+::-webkit-scrollbar-thumb:vertical:hover,
+::-webkit-scrollbar-thumb:horizontal:hover {
+  background-color: #1976d2
+}
